--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-2019, macos-latest]
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install MinGW on Windows
+      - name: Setup GCC on Windows
         if: runner.os == 'Windows'
         run: |
-          choco install mingw -y
-          echo "C:\ProgramData\chocolatey\bin" >> $GITHUB_PATH
+          gcc --version
         shell: bash
 
       - name: Compile on Linux & macOS
@@ -62,9 +61,9 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          files: "*/ecm* *unecm*"
+          files: "ecm-unecm-*/ecm* ecm-unecm-*/unecm*"
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
-          body: "Release-Binaries for ECM/UNECM."
+          body: "Automatically generated release binaries for ECM/UNECM."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
