--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,15 +44,15 @@ jobs:
 
       - name: Prepare Artifacts
         run: |
-          mkdir release
-          mv ecm* unecm* release/
+          mkdir -p release/${{ runner.os }}
+          mv ecm* unecm* release/${{ runner.os }}/
         shell: bash
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ecm-unecm-${{ runner.os }}
-          path: release/*
+          path: release/${{ runner.os }}/*
 
   release:
     name: Create GitHub Release
@@ -66,9 +66,9 @@ jobs:
         uses: actions/download-artifact@v4
 
       - name: Create Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v1
         with:
-          files: "ecm-unecm-*/ecm* ecm-unecm-*/unecm*"
+          files: "release/**/ecm* release/**/unecm*"
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           body: "Automatically generated release binaries for ECM/UNECM."
