--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,10 +65,16 @@ jobs:
       - name: Download all Artifacts
         uses: actions/download-artifact@v4
 
+      - name: Move Artifacts to Release Folder
+        run: |
+          mkdir -p release
+          mv ecm-unecm-*/ecm* ecm-unecm-*/unecm* release/
+        shell: bash
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: "release/**/ecm* release/**/unecm*"
+          files: "release/*"
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           body: "Automatically generated release binaries for ECM/UNECM."
