--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: Build and Release ECM/UNECM
 
 on:
-  push:
-    branches:
-      - release
+  workflow_dispatch:
 
 permissions:
   contents: write
